# epc-new

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml  ruff.toml
.claude/: settings.local.json
reports/: epc_ratings_dashboard.html  epc_ratings_dashboard.md  epc_ratings_monthly.json
scripts/: month_plots.r  run_updates.py
sql/: 01_ingest.sql  02_comments.sql  02_epc_create_views.sql  03_comments.sql  03_create_ca_la_lookup_tbl.sql  03_epc_create_views.sql  04_comments.sql  04_epc_ods_export.sql  06_update_certificates.sql  07_epc_ods_export.sql  08_export_to_motherduck.sql  introspect.sql
sql/archive/: 05_analysis_epc_ranges_month_cumulative.sql
sql/schemas/: domestic_certificates.sql  domestic_recommendations.sql  non_domestic_certificates.sql  non_domestic_recommendations.sql
