[project]
name = "epc-new"
version = "0.1.0"
description = "epc data processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.0",
    "polars>=1.32.0",
    "httpx>=0.27.0",
    "pyyaml",
    "pyarrow",
    "pyzmq>=27.1.0",
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

